@@ -458,11 +458,6 @@
   }
   
   
-}  
-  
-  
-  
-  
   .student-mini-profile .profile-top-wrapper-left-side {
     width: 250px;
   }
